--- a/lib/libcrypto/man/EVP_MD_meth_new.3
+++ b/lib/libcrypto/man/EVP_MD_meth_new.3
@@ -1,4 +1,4 @@
-.\" $OpenBSD: EVP_MD_meth_new.3,v 1.4 2023/09/12 12:11:05 schwarze Exp $
+.\" $OpenBSD: EVP_MD_meth_new.3,v 1.5 2023/09/12 16:26:30 schwarze Exp $
 .\" selective merge up to:
 .\" OpenSSL man3/EVP_MD_meth_new 0388d212 Dec 14 12:47:07 2018 -0800
 .\"
@@ -235,7 +235,7 @@ and by the objects returned from
 and
 .Xr EVP_sm3 3 .
 .It Dv EVP_MD_FLAG_DIGALGID_CUSTOM
-This flag is reserved for used-defined
+This flag is reserved for user-defined
 .Vt EVP_MD
 objects supporting custom
 .Vt DigestAlgorithmIdentifier
