--- a/share/man/man5/ruby-module.5
+++ b/share/man/man5/ruby-module.5
@@ -1,5 +1,4 @@
-m
-.\"	$OpenBSD: ruby-module.5,v 1.41 2023/09/11 20:02:38 jeremy Exp $
+.\"	$OpenBSD: ruby-module.5,v 1.42 2023/09/12 17:21:05 schwarze Exp $
 .\"
 .\" Copyright (c) 2008 Marc Espie, Jeremy Evans
 .\"
@@ -25,7 +24,7 @@ m
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: September 11 2023 $
+.Dd $Mdocdate: September 12 2023 $
 .Dt RUBY-MODULE 5
 .Os
 .Sh NAME
@@ -44,7 +43,7 @@ Sets
 .Ev GEM_BASE_LIB ,
 .Ev GEM_BIN ,
 .Ev GEM_BIN_SUFFIX ,
-.Ev GEM_EXTENSIONS_DIR,
+.Ev GEM_EXTENSIONS_DIR ,
 .Ev GEM_FLAGS ,
 .Ev GEM_LIB ,
 .Ev GEM_MAN_SUFFIX ,
@@ -154,8 +153,8 @@ to
 It also adds ruby30, ruby31, and ruby32
 .Ev FLAVOR Ns s
 to the port.
-If the C extension in the gem requires specific arguments to extconf.rb, set those
-via
+If the C extension in the gem requires specific arguments to extconf.rb,
+set those via
 .Ev CONFIGURE_ARGS .
 .El
 .Pp
