--- a/usr.sbin/radiusd/radiusd.conf.5
+++ b/usr.sbin/radiusd/radiusd.conf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: radiusd.conf.5,v 1.17 2023/09/08 05:56:22 yasuoka Exp $
+.\"	$OpenBSD: radiusd.conf.5,v 1.18 2023/09/14 09:55:28 yasuoka Exp $
 .\"
 .\" Copyright (c) 2014 Esdenera Networks GmbH
 .\" Copyright (c) 2014, 2023 Internet Initiative Japan Inc.
@@ -15,7 +15,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: September 8 2023 $
+.Dd $Mdocdate: September 14 2023 $
 .Dt RADIUSD.CONF 5
 .Os
 .Sh NAME
@@ -130,7 +130,8 @@ This configuration cannot be omitted.
 .It Ic max-tries Ar number
 Specify the maximum number of retransmissions for a server.
 .Xr radiusd 8
-will retransmit 2, 6, 14, 22, and 30 seconds after the first transmission.
+will retransmit 2, 6, 14, 22, and 30 seconds after the first transmission
+and subsequent retransmissions will occur every 8 seconds.
 If the number of retransmissions per server reaches this value,
 the current server is marked as
 .Dq fail ,
