update awk book reference for the second edition it will be published in 2023 with a copyright date of 2024 ok jmc@ millert@

--- a/usr.bin/awk/awk.1
+++ b/usr.bin/awk/awk.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: awk.1,v 1.63 2021/11/08 06:46:22 jmc Exp $
+.\"	$OpenBSD: awk.1,v 1.64 2023/09/15 15:07:08 jsg Exp $
 .\"
 .\" Copyright (C) Lucent Technologies 1997
 .\" All Rights Reserved
@@ -22,7 +22,7 @@
 .\" ARISING OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF
 .\" THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: November 8 2021 $
+.Dd $Mdocdate: September 15 2023 $
 .Dt AWK 1
 .Os
 .Sh NAME
@@ -1001,8 +1001,8 @@ No others do.
 .%A P. J. Weinberger
 .%T The AWK Programming Language
 .%I Addison-Wesley
-.%D 1988
-.%O ISBN 0-201-07981-X
+.%D 2024
+.%O ISBN 0-13-826972-6
 .Re
 .Sh STANDARDS
 The
