--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.628 2023/09/14 14:06:13 sthen Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.629 2023/09/16 07:59:44 op Exp $
 .\"
 .\" Copyright (c) 2000-2008 Marc Espie
 .\"
@@ -24,7 +24,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: September 14 2023 $
+.Dd $Mdocdate: September 16 2023 $
 .Dt BSD.PORT.MK 5
 .Os
 .Sh NAME
@@ -1343,6 +1343,9 @@ as this can be a big performance hit, and also because
 .Ev lib-depends-check
 doesn't know about library subdirectories or dynamic loading through
 .Xr dlopen 3 .
+.It Ev CHECK_LIB_DEPENDS_ARGS
+List of extra arguments for
+.Xr check-lib-depends 1 .
 .It Ev CHECKSUMFILES
 List of all files that need to be retrieved by
 .Cm fetch ,
