--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.630 2023/09/16 08:01:31 op Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.631 2023/09/19 20:50:40 tb Exp $
 .\"
 .\" Copyright (c) 2000-2008 Marc Espie
 .\"
@@ -24,7 +24,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: September 16 2023 $
+.Dd $Mdocdate: September 19 2023 $
 .Dt BSD.PORT.MK 5
 .Os
 .Sh NAME
@@ -1661,7 +1661,7 @@ or
 .Sq srht
 at the moment
 .Po see
-.Pa ${PORTSDIR}/db/dist-tuple.pattern ,
+.Pa ${PORTSDIR}/infrastructure/db/dist-tuple.pattern ,
 additional
 .Ev TEMPLATE_DISTFILES.<name>
 and
