--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.631 2023/09/19 20:50:40 tb Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.632 2023/09/23 16:06:10 espie Exp $
 .\"
 .\" Copyright (c) 2000-2008 Marc Espie
 .\"
@@ -24,7 +24,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: September 19 2023 $
+.Dd $Mdocdate: September 23 2023 $
 .Dt BSD.PORT.MK 5
 .Os
 .Sh NAME
@@ -102,9 +102,9 @@ for
 .Xr tsort 1 .
 .Pp
 Note that it is possible to obtain reverse dependency information by
-using
+using the
 .Nm show-reverse-deps
-from the
+script from the
 .Pa sqlports
 package.
 .It Cm full-{build,run,all,test}-depends
