--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.633 2023/09/23 16:08:46 espie Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.634 2023/09/24 09:15:43 op Exp $
 .\"
 .\" Copyright (c) 2000-2008 Marc Espie
 .\"
@@ -24,7 +24,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: September 23 2023 $
+.Dd $Mdocdate: September 24 2023 $
 .Dt BSD.PORT.MK 5
 .Os
 .Sh NAME
@@ -2706,8 +2706,6 @@ see also
 Special arguments to pass to
 .Xr pkg_create 1 ,
 in addition to the default ones.
-For mips64 and pic libraries, see
-.Sx THE GENERATION OF PACKAGE INFORMATION .
 .It Ev PKG_CREATE
 User settings.
 Path to
@@ -4208,21 +4206,6 @@ or
 .Li "-Dfrag=0"
 to
 .Ev PKG_ARGS .
-.Pp
-If libraries are built using
-.Pa bsd.lib.mk ,
-special care should be taken for mips64* architectures,
-which do not ever build
-.Pa *pic.a
-files (all mips code is pic already).
-.Nm
-automatically adds
-.Li "-Dno_mips64=1"
-or
-.Li "-Dno_mips64=0"
-to
-.Ev PKG_ARGS ,
-and the porter only needs to provide the appropriate fragment.
 .Pp
 .Xr pkg_add 1
 now calls
