New manual page documenting the usual four ASN.1 functions for both ASRange and ASIdOrRange

--- a/lib/libcrypto/man/X509_new.3
+++ b/lib/libcrypto/man/X509_new.3
@@ -1,4 +1,4 @@
-.\" $OpenBSD: X509_new.3,v 1.38 2023/09/25 01:14:34 tb Exp $
+.\" $OpenBSD: X509_new.3,v 1.39 2023/09/25 11:59:10 tb Exp $
 .\" full merge up to: OpenSSL 99d63d46 Oct 26 13:56:48 2016 -0400
 .\"
 .\" This file is a derived work.
@@ -194,6 +194,7 @@ or
 if an error occurs.
 .Sh SEE ALSO
 .Xr ASIdentifiers_new 3 ,
+.Xr ASRange_new 3 ,
 .Xr AUTHORITY_KEYID_new 3 ,
 .Xr BASIC_CONSTRAINTS_new 3 ,
 .Xr crypto 3 ,
