Missing variable name in prototype

--- a/lib/libcrypto/man/ASRange_new.3
+++ b/lib/libcrypto/man/ASRange_new.3
@@ -1,4 +1,4 @@
-.\" $OpenBSD: ASRange_new.3,v 1.2 2023/09/26 08:56:18 tb Exp $
+.\" $OpenBSD: ASRange_new.3,v 1.3 2023/09/26 13:02:47 tb Exp $
 .\"
 .\" Copyright (c) 2023 Theo Buehler <tb@openbsd.org>
 .\"
@@ -36,7 +36,7 @@
 .Ft "ASRange *"
 .Fn ASRange_new void
 .Ft void
-.Fn ASRange_free "ASRange *"
+.Fn ASRange_free "ASRange *asrange"
 .Ft ASRange *
 .Fo d2i_ASRange
 .Fa "ASRange **asrange"
