--- a/lib/libcrypto/man/ASRange_new.3
+++ b/lib/libcrypto/man/ASRange_new.3
@@ -1,4 +1,4 @@
-.\" $OpenBSD: ASRange_new.3,v 1.3 2023/09/26 13:02:47 tb Exp $
+.\" $OpenBSD: ASRange_new.3,v 1.4 2023/09/26 15:34:23 tb Exp $
 .\"
 .\" Copyright (c) 2023 Theo Buehler <tb@openbsd.org>
 .\"
@@ -83,9 +83,10 @@
 .Vt ASIdOrRange ,
 and
 .Vt ASIdentifierChoice
-are building blocks of the RFC 3779
+are building blocks of the
 .Vt ASIdentifiers
-type representing the autonomous system identifier delegation extension.
+type representing the RFC 3779
+autonomous system identifier delegation extension.
 See
 .Xr ASIdentifiers_new 3
 and
@@ -355,10 +356,10 @@ or a value <= 0 if an error occurs.
 .Xr BN_set_word 3 ,
 .Xr BN_to_ASN1_INTEGER 3 ,
 .Xr crypto 3 ,
+.Xr IPAddressRange_new 3 ,
 .Xr s2i_ASN1_INTEGER 3 ,
 .Xr X509_new 3 ,
-.Xr X509v3_asid_add_id_or_range 3 ,
-.Xr X509v3_asid_is_canonical 3
+.Xr X509v3_asid_add_id_or_range 3
 .Sh STANDARDS
 RFC 3779: X.509 Extensions for IP Addresses and AS Identifiers:
 .Bl -dash -compact
